added abstract and acknowledge

--- a/chap1.tex
+++ b/chap1.tex
@@ -887,7 +887,7 @@ developments in AI and Alife. These early simulacra, though little known and
 rarely referenced today, provide critical background for the attempts
 that followed. 
 
-%% Steam governors
+%% Steam governors  κυβερνήτης
 Many of these automata, despite being surprisingly accurate
 mimeses of life, did little in terms of interaction with the
 environment. Meaningful interaction requires closing the loop between
@@ -908,7 +908,9 @@ sensing and acting in the manner of a
  areas including control theory,
  cybernetics---from the Greek \emph{cybernetes}\footnote{This is as
    written in Wiener's contemporary papers. It should perhaps be written
-   as \emph{kybernetes}, κυβερνήτης \kappa\upsilon\beta\varepsilon\rho\nu\'{\eta}\tau\eta\varsigma. \cite[p. 11]{cybernetics}} meaning
+   as \emph{kybernetes},
+   $\kappa\upsilon\beta\varepsilon\rho\nu$\'{$\eta$}$\tau\eta\varsigma$
+   \cite[p. 11]{cybernetics}.} meaning 
  ``steersman'' \cite[p. 6]{wienerMainIdeas}---extended their reach to more complex
  systems: ``control and communication in the animal and machine''. As
  Norbert Wiener puts it, control, or the
