--- a/chap2.tex
+++ b/chap2.tex
@@ -1432,7 +1432,15 @@ Thinking about the variety in types, uses, and users of road vehicles---from
 subcompacts to vans to pickup trucks; from solo commuting to carrying kids to
 hauling construction equipment or moving furniture; from the wealthy
 to the poor, the urban to the rural---makes clear that cars are
-multipurpose vehicles, with culturally-specific uses. 
+multipurpose vehicles, with culturally-specific uses. And
+acknowledging this
+specificity is vital for developing fair and just technologies,
+particularly
+considering the potential for automated taxi fleets to 
+be used to justify decreased investment in---or even, in some
+simulations, replace entirely
+\cite{frazzoliSingapore}---public transportation infrastructure, and the need to
+improve, rather than erode, equitable access to transportation.
 
 %%Perhaps add in a quick aside about a map-only interface that
 %%requires a destination for operation: this assumes your driving has
