--- a/chap3.tex
+++ b/chap3.tex
@@ -102,7 +102,10 @@ technologies.
 
 From 1952 to 1954, \emph{Colliers} magazine published a series of articles
 titled \emph{Man Will Conquer Space Soon} which described Wernher Von
-Braun's vision for manned spaceflight \cite{scribdCollier} \cite{dreamsofspace}. Numerous
+Braun's vision for manned spaceflight \cite{scribdColliers}
+\cite{dreamsofspace}.\footnote{The illustrations from this magazine
+  are reputed to be some of the ``most influential images of the early
+space age'' \cite[p. 9]{marketingMoon}.} Numerous 
 articles focused, not surprisingly, on the people who would do the
 voyaging, how they would be selected, tested, and kept alive. But
 lurking behind this majestic picture of manned spaceflight was a dark
@@ -214,7 +217,7 @@ not fit with the ideally meritocratic culture and the political aims
 of the US program, not to mention the flying culture of the astronauts
 ultimately selected for the program.\footnote{All those selected for
   the Mercury program were military test pilots, despite NASA's
-  existence as a civilian agency.} Issues of secrecy alone
+  existence as a civilian agency. Issues of secrecy alone
 should not have disqualified other military personnel, and a greater
 emphasis on science in the program would have suggested actually
 including scientists on flight teams, as Mindell notes. Though over the recruitment
@@ -526,7 +529,7 @@ related to this tendency not to monitor the automation system:
 experience shows that human operators who become reliant on the
 automation to perform a task are ill-equipped to take that task back
 in a crisis situation, and task hand-over is likely to be
-catastrophic \cite{447} \cite{Chowpaper}. A transportation systems
+catastrophic \cite{AF447} \cite{Chowpaper}. A transportation systems
 researcher I spoke to 
 even cited this as the key reason he felt that highway-only
 self-driving systems would not work, and that companies would have to
@@ -588,7 +591,7 @@ aircraft ``fly itself'' in a given orientation or does it require
 constant control inputs to maintain course---goes back as far as the
 Wright Flyer, as do the competing professional identities that
 accompany them: are you simply a chauffeur, or a ``true
-airman''\cite[p. 21]{DM}? The Wright's focus on the operator's
+airman'' \cite[p. 21]{DM}? The Wright's focus on the operator's
 skill\footnote{The navigation of human and automated capabilities in
   high-performance racing also deserves proper investigation. But I suspect
 similar issues play out in this arena: modern racing cars depend on
@@ -598,7 +601,7 @@ rules that disallow certain technologies:  ABS and traction control are
 banned from Formula 1 racing, for example.} created the unique profession of the
 ``pilot,'' and unstable aircraft were the standard for years, until
 human fatigue over long periods of flight changed the importance of
-stability to aircraft operation\cite[p. 22-24]{DM}. Stability,
+stability to aircraft operation \cite[p. 22-24]{DM}. Stability,
 this subsequent virtue of a well-engineered airframe had to be again
 renegotiated in the context of supersonic flight, where stability
 problems related to supersonic airflow required electronic
