--- a/concl.tex
+++ b/concl.tex
@@ -757,10 +757,10 @@ near term or long term.
 %% ----and we should KEEP the human involved as a matter of design
 %% principle (2 p)
 
-These considerations may well imply we need to maintain significant
+These considerations may well imply the need to maintain significant
 human involvement in order to mitigate risk, achieve public
 acceptance, and address the human goals that drive technological
-development. Rather than ``to automate or not to automate,'' we ask
+development. Rather than ``to automate or not to automate,'' we should ask
 ``how and why do we automate?'' But even in the most automated
 technologies, their 
 autonomy is largely an artifact of the lens through which we engage
@@ -773,7 +773,8 @@ principle is
 the most important first step we can take toward rebalancing the
 narrative of automation toward something more productive, which takes
 seriously the technological hybridity of our past, present and future.
-And it paves the way for a political critique that asks, knowing
+And it paves the way for a political critique of automated vehicles
+that asks, knowing 
 that humans remain involved, who they are, where they are, and how
 the system is being designed to serve their needs or impede their
 agency.
