--- a/cover.tex
+++ b/cover.tex
@@ -140,8 +140,55 @@ Automated Car}
 
 \section*{Acknowledgments}
 
-This is the acknowledgements section.  You should replace this with your
-own acknowledgements.
+Any substantial work of writing has a long gestation period, and this
+has been no exception. A great number of people come to mind who have
+contributed to the existence of this thesis over the last 20 months,
+but I fear I must 
+inevitably leave some out:  (\emph{mea maxima culpa}). 
+
+No master's thesis is complete without a
+solid advising team, and my most heartfelt thanks go to T. L. Taylor
+for her careful reading and editing, and her ceaseless dedication (including periodic
+game nights) to ensuring we all make it through the master's process with most of our
+sanity intact. David Mindell has also been a continual resource
+throughout the writing of this thesis---and indeed is cited frequently
+within it---and I look forward to continuing to work with him on
+future projects. Nick Montfort (who has exhorted me repeatedly to, as
+much as possible, interrogate the technical objects themselves),
+William Uricchio (who has challenged my terminological precision),
+Heather Hendershot (who has kept my eye on science fiction) have all
+been indispensable in their own ways, and have given freely of both
+thesis and career advice.
+
+All of my classmates, in the classes of 2014, 2015 and 2016 have been great
+friends, supporters, and sounding boards for ideas. But I fear I must
+specifically thank Liam Andrew, Chelsea Barabas, Suruchi Dumpawar,
+Jesse Sell, Ainsley Sutherland, and Wang Yu for discussing
+self-driving vehicles and technological ideology with me 
+more times than some of them probably cared to---and additionally Desi
+Gonzalez, Kyrie Caldwell, and Lacey Lord for being available for
+games and gripe sessions throughout the process. On that note, my old
+friend Kristin Bergman, and my new friend Andrea Morales Coto, have
+been invaluable companions on this adventure, providing much needed
+levity and perspective in trying times.
+
+My parents, Barbara Mindell and Lee Stayton, have often been the first
+to hear my ideas, and have provided irreplaceable editing and feedback
+on this and other projects during my two years at MIT. I am so pleased
+to have been able to share this work with you, and both it, and I,
+have profited immensely from your input and your presence. Abigail
+Strait, whose food, hospitality, and endless supply of tea I have
+partaken of innumerable (at least more than twenty!) times during the
+writing of this thesis, you will always have my gratitude.
+
+But most of all, Evan Donahue, whose keen commentary, acerbic wit, and
+drive to re-envision the future of humanity has spurred me on: this
+project exists in no small part due to his influence, and he most of
+all deserves thanks. As we have 
+often said, this was supposed to be the Fourth Great and Bountiful
+Human Empire. Let us make it so.
+
+ 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % -*-latex-*-
