--- a/intro.tex
+++ b/intro.tex
@@ -333,12 +333,10 @@ The 1964 New York World's Fair hosted a second Futurama exhibit, in
 which GM presented an automated highway system much like Zworykin's
 system next to multitudinous nuclear-powered concepts. The exhibit was
 thus described: 
-\begin{quote}
-A revolutionary 'Autoline' expands the capacity of a three-lane
+\begin{quote}A revolutionary 'Autoline' expands the capacity of a three-lane
 expressway: Electronically, a control-tower operator steers, brakes
 and sets the speed of each car in an automatic lane; groups of cars
-move at equal intervals as a group \cite[p. 9]{wetmore}.
-\end{quote}
+move at equal intervals as a group \cite[p. 9]{wetmore}.\end{quote}
  Advances in
 electronics, and the expansion of early control theory into
 cybernetics through the work of Norbert Wiener (who gave numerous
@@ -458,7 +456,8 @@ look of the autonomous car with its roof mounted LIDAR scanner, other
 companies are developing vehicles with slightly different sensors and
 techniques. Google's approach uses cameras and the rotating laser
 scanner, along with detailed pre-mapping and highly-accurate
-differential GPS \cite{guizzo}. Mercedes, so far, focuses more on cameras and radar,
+differential GPS \cite{guizzoHow}. Mercedes, so far, focuses more on
+cameras and radar, 
 without using expensive LIDAR systems or requiring exquisitely
 detailed pre-mapping of streets---and some of these features are
 already seen in the new S-class luxury sedan, though these vehicles
