--- a/main.bib
+++ b/main.bib
@@ -108,7 +108,7 @@
    address = "Cambridge, UK",
    year = 1996,
    pages = "15--34",
-   note = "Text available at http://hci.ucsd.edu/media/uploads/hci_papers/EH1996-1.pdf",
+   note = "Text available at http://hci.ucsd.edu/media/uploads/hci\_papers/EH1996-1.pdf",
 }
 
 @UNPUBLISHED{roesmithYankee,
@@ -960,7 +960,7 @@
    pages = "11--15",
 }
 
-@ARTICLE{merill,
+@ARTICLE{merrill,
    author = "Brad Merrill",
    title = "{H}ow {S}elf-{D}riving {C}ars {W}ill {C}hange {T}ransportation {F}orever",
    journal = "MakeUseOf",
@@ -1250,7 +1250,7 @@
    author = "Artur Coelho",
    title = "{C}ollier's {M}agazine {M}an {W}ill {C}onquer {S}pace",
    journal = "Scribd",
-   month = January 02,
+   month = "January 02",
    year = 2013,
    note = "http://www.scribd.com/doc/118710867/Collier-s-Magazine-Man-Will-Conquer-Space; This is a collection of scans from Collier's magazine.",
 }
@@ -1311,7 +1311,7 @@
    title = "Speech at the Civic Auditorium, Portland, OR",
    month = "September 7",
    year = 1960,
-   note = "Via http://jfklink.com/speeches/jfk/sept60/jfk070960_portland03.html",
+   note = "Via http://jfklink.com/speeches/jfk/sept60/jfk070960\_portland03.html",
 }
 
 @ARTICLE{bessonov,
@@ -1375,7 +1375,7 @@
    author = "Donald C. Cheatham and Floyd V. Bennett",
    title = "{A}pollo Lunar Module Landing Strategy",
    type = "NASA Manned Spacecraft Center Report",
-   note = "http://ocw.mit.edu/courses/science-technology-and-society/sts-471j-engineering-apollo-the-moon-project-as-a-complex-system-spring-2007/readings/4_2_lunr_landing.pdf",
+   note = "http://ocw.mit.edu/courses/science-technology-and-society/sts-471j-engineering-apollo-the-moon-project-as-a-complex-system-spring-2007/readings/4\_2\_lunr\_landing.pdf",
 }
 
 @TECHREPORT{BennettExperience,
@@ -1512,7 +1512,7 @@
 }
 
 @ARTICLE{787dream,
-   key = "787 Dreamliner vs. A380: cockpit comparisons"
+   key = "787 Dreamliner vs. A380: cockpit comparisons",
    author = "",
    title = "787 Dreamliner vs. A380: cockpit comparisons",
    journal = "Aerospace Technology",
@@ -1572,7 +1572,7 @@
    journal = "The New York Times",
    month = "May 27",
    year = "2014",
-   note = "http://www.nytimes.com/2014/05/28/technology/googles-next-phase-in-driverless-cars-no-brakes-or-steering-wheel.html?_r=0",
+   note = "http://www.nytimes.com/2014/05/28/technology/googles-next-phase-in-driverless-cars-no-brakes-or-steering-wheel.html",
 }
 
 @ARTICLE{friedGoogle,
@@ -1584,7 +1584,7 @@
    note = "http://recode.net/2015/03/17/google-self-driving-car-chief-wants-tech-on-the-market-within-five-years/",
 }
 
-@ARTICLE{burkhardBilger,
+@ARTICLE{bilgerAuto,
    author = "Burkhard Bilger",
    title = "Auto Correct: Has the self-driving car at last arrived?",
    journal = "The New Yorker",
@@ -1623,7 +1623,7 @@
 
 @TECHREPORT{aevita,
    author = "Nicholas Pennycooke",
-   title = "{AEVITA}: {D}esigning {B}iomimetic {V}ehicle-to-{P}edestrian {C}ommunication {P}rotocols for {A}utonomously {O}perating /& {P}arking {O}n-{R}oad {E}lectric {V}ehicles",
+   title = "{AEVITA}: {D}esigning {B}iomimetic {V}ehicle-to-{P}edestrian {C}ommunication {P}rotocols for {A}utonomously {O}perating \& {P}arking {O}n-{R}oad {E}lectric {V}ehicles",
    institution = "Master's Thesis MIT Media Arts and Sciences",
    month = "August 7",
    year = 2012,
@@ -1669,7 +1669,7 @@
    author = "Philip K. Dick",
    title = "The Android and the Human",
    year = "1972",
-   note = "Speech given at the Vancouver Science Fiction Convention, University of British Colombia. Originally published in SF Commentary #31. Full text at http://genius.com/Philip-k-dick-the-android-and-the-human-annotated#note-4386783",
+   note = "Speech given at the Vancouver Science Fiction Convention, University of British Colombia. Originally published in SF Commentary \#31. Full text at http://genius.com/Philip-k-dick-the-android-and-the-human-annotated\#note-4386783",
 }
 
 @ARTICLE{clyneskline,
@@ -1694,7 +1694,7 @@
 @ARTICLE{suemycar,
    author = "Jeffrey K. Gurney",
    title = "Sue My Car Not Me: Products Liability and Accidents Involving Autonomous Vehicles",
-   journal = "U. Ill. J. L. Tech /& Pol'y",
+   journal = "U. Ill. J. L. Tech \& Pol'y",
    number = 247,
    month = "November",
    year = "2013",
@@ -1802,7 +1802,7 @@
 }
 
 @ARTICLE{phantomAuto,
-   key = "'Phantom Auto' will ..."
+   key = "'Phantom Auto' will ...",
    author = "",
    title = "'Phantom Auto' will tour city",
    journal = "The Milwaukee Sentinel",
@@ -1812,7 +1812,7 @@
 }
 
 @ARTICLE{phantomAuto2,
-   key = "'Phantom Auto' to Be ..."
+   key = "'Phantom Auto' to Be ...",
    author = "",
    title = "'Phantom Auto' to Be Operated Here",
    journal = "The Free-Lance Star",
@@ -1822,16 +1822,16 @@
 }
 
 @UNPUBLISHED{modernmechanix,
-   key = "Modern Mechanix (cover)"
+   key = "Modern Mechanix (cover)",
    author = "",
    title = "Modern Mechanix (cover)",
    month = "April",
-   year = "1936"
+   year = "1936",
    note = "Accessed December 15, 2014: http://www.coverbrowser.com/covers/modern-mechanix/2",
 }
 
 @ARTICLE{lightbeams,
-   key = "Light Beams ..."
+   key = "Light Beams ...",
    author = "",
    title = "Light Beams Steer Super Racing Cars",
    journal = "Modern Mechanix",
@@ -1841,7 +1841,7 @@
 }
 
 @ARTICLE{tribuneViaPaleo,
-   key = "In 50 Years ..."
+   key = "In 50 Years ...",
    author = "",
    title = "In 50 Years: Cars Flying Like Missiles!",
    journal = "Chicago Daily Tribune",
@@ -2008,8 +2008,29 @@
    note = "http://blogs.wsj.com/digits/2015/04/10/when-red-means-go-whats-an-autonomous-car-to-do/",
 }
 
+@BOOK{faxed,
+   author = "Jonathan Coopersmith",
+   title = "{F}axed: {T}he {R}ise and {F}all of the {F}ax {M}achine",
+   publisher = "Johns Hopkins University Press",
+   address = "Baltimore, MD",
+   year = "2015",
+}
 
+@BOOK{kellyMagnetic,
+   author = "Kelly Ann Joyce",
+   title = "{M}agnetic {A}ppeal: {MRI} and the {M}yth of {T}ransparency",
+   publisher = "Cornell University Press",
+   address = "Ithaca, NY",
+   year = "2008",
+}
 
+@BOOK{marketingMoon,
+   author = "David Meerman Scott and Richard Jurek",
+   title = "{M}arketing the {M}oon: {T}he {S}elling of the {A}pollo {L}unar {P}rogram",
+   publisher = "MIT Press",
+   address = "Cambridge, MA",
+   year = "2014",
+}
 
 
 
@@ -2125,7 +2146,7 @@
    crossref = "kempCars",
    author = "Christopher Swope",
    title = "{T}renton {R}edesigns {I}ts {F}reeways to {S}low {D}own {T}raffic",
-   pages = "181--185,
+   pages = "181--185",
 }
 
 @INCOLLECTION{loweCars,
