--- a/main.tex
+++ b/main.tex
@@ -31,6 +31,7 @@
 %% some PDF conversions mess up the ligatures.  -LB, 1/22/2014
 \usepackage{cmap}
 \usepackage[T1]{fontenc}
+%%\usepackage{textgreek}
 \pagestyle{plain}
 
 %% This bit allows you to either specify only the files which you wish to
